--- a/generators/pubspec.yaml
+++ b/generators/pubspec.yaml
@@ -1,7 +1,8 @@
-name: annotation
+name: generators
 description: A new Flutter package project.
 version: 0.0.1
 homepage:
+publish_to: none
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
@@ -11,9 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  build:
+  source_gen:
+
+  # Our annotation
+  annotations:
+    path: ../annotations/
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner:
+  
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
