--- a/generators/build.yaml
+++ b/generators/build.yaml
@@ -6,7 +6,7 @@ targets:
 
 builders:
   generators:
-    target: ":generators"
+    target: ":generators" # Generator name
     import: "package:generators/generators.dart"
     builder_factories: ["generateJsonMethods"] # Builder name(BuilderOption) this is a definition
     build_extensions: { ".dart": [".g.part"] }
